<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sysBGLightFGray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sugarcrm.android.login.LoginActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_sugar_logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:fontFamily="arial"
        android:text="@string/logo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/sysLightSylverBlue"
        android:textSize="56sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_login"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" >

            <TextView
                android:id="@+id/textview_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/sysOrange"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" >

            <TextView
                android:id="@+id/textview_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/sysOrange"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33" >

            <TextView
                android:id="@+id/textview_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/sysOrange"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/login_progress_wheel"
        android:background="@drawable/button_login"
        android:fontFamily="arial"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:textSize="26sp" />

    <ProgressBar
        android:id="@+id/login_progress_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:indeterminateDrawable="@drawable/progress_wheel_interminate"
        android:visibility="invisible" />

</RelativeLayout>